--- a/config/database.yml
+++ b/config/database.yml
@@ -81,6 +81,7 @@ test:
 #
 production:
   <<: *default
-  database: gear_library_production
-  username: gear_library
-  password: <%= ENV["GEAR_LIBRARY_DATABASE_PASSWORD"] %>
+  url: DATABASE_URL
+  # database: gear_library_production
+  #username: gear_library
+  #password: <%= ENV["GEAR_LIBRARY_DATABASE_PASSWORD"] %>
