--- a/config/database.yml
+++ b/config/database.yml
@@ -80,7 +80,7 @@ test:
 # for a full overview on how database connection configuration can be specified.
 #
 production:
-  #<<: *default
+  <<: *default
   url: DATABASE_URL
   database: PGDATABASE
   username: PGUSER
