--- a/config/storage.yml
+++ b/config/storage.yml
@@ -1,3 +1,5 @@
+
+
 test:
   service: Disk
   root: <%= Rails.root.join("tmp/storage") %>
@@ -10,6 +12,10 @@ local:
   service: Disk
   root: <%= Rails.root.join("../shared/storage") %>
 
+  
+cloudinary:      
+  service: Cloudinary
+  
 # Use bin/rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 # amazon:
 #   service: S3
