--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,8 @@
 /tmp/storage/*
 !/tmp/storage/
 !/tmp/storage/.keep
-
+/node_modules/*
+/node_modules
 /public/assets
 
 # Ignore master key for decrypting credentials and more.
