last commit missed some things

--- a/config/cloudinary.yml
+++ b/config/cloudinary.yml
@@ -4,3 +4,10 @@ production:
   api_secret: <%= ENV["CLOUD_API_SECRET"] %>
   secure: true
   cdn_subdomain: true
+
+development: 
+  cloud_name: <%= ENV["CLOUD_NAME"] %>
+  api_key: <%= ENV["API_KEY"] %>
+  api_secret: <%= ENV["API_SECRET"] %>
+  secure: true
+  cdn_subdomain: true
