--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1"
+  },
+  "devDependencies": {
+    "@types/bootstrap": "^5.1.11"
   }
 }
